# veteran-developer

./: .gitignore
ContextFreeSQL/: .__atomic-write78b7bb68  .__atomic-writeb03802eb  .gitignore  pyproject.toml  readme.txt  requirements.txt
ContextFreeSQL/src/: main.py
ContextFreeSQL/src/ContextFreeSQL/: main.py
ContextFreeSQL/tests/: basic-test.sql  test_main.py
