[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ContextFreeSQL"
version = "0.1.0"
description = "Brief description of your project"
authors = [{name = "Jonathan Scion", email = "Jonathan.scion@gmail.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "sqlparse>=0.4.4",  # Added this line for SQL parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0"
]

[project.scripts]
ContextFreeSQL = "ContextFreeSQL.main:main"